--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ APP_SECRET=6bd113b4cfe9b0292355de4779287577
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root@127.0.0.1:3306/velp
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
