--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,7 +47,7 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY, methods: [GET, PUT, DELETE] }
+    - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY, methods: [GET, PUT] }
     - { path: ^/api/adverts, roles: IS_AUTHENTICATED_FULLY }
     - { path: ^/api/categories, roles: IS_AUTHENTICATED_FULLY }
     - { path: ^/api/messages, roles: IS_AUTHENTICATED_FULLY }
